# fear-greed-notifier

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: fear-greed.yaml
docs/: backtest_scenarios.md
src/: __init__.py  main.py
src/fetchers/: __init__.py  fear_greed_fetcher.py  vix_fetcher.py
src/models/: __init__.py  market_signal.py
src/monitors/: __init__.py  vix_monitor.py
src/notifiers/: __init__.py  discord_notifier.py
tests/: test_historical_backtest.py
