[project]
name = "fear-greed-notifier"
version = "0.1.0"
description = "CNN Fear & Greed Index notifier for Discord"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
